@@ -1,10 +1,6 @@
 lib_LTLIBRARIES	=	libtdssrv.la
-##EXTRA_LTLIBRARIES	=	libtdssrv.la
 libtdssrv_la_SOURCES=	query.c server.c login.c
-libtdssrv_la_LDFLAGS=	-rpath $(libdir)
+libtdssrv_la_LDFLAGS=	-version-info 1:0:0
+libtdssrv_la_LIBADD =	../tds/libtds_objects.la $(NETWORK_LIBS) $(LIBICONV) ../replacements/libreplacements.la
 INCLUDES	=	-I$(top_srcdir)/include
 EXTRA_DIST = unittest.c
-## Need a blank statement to avoid compiling server.c
-server: $(EXTRA_LTLIBRARIES)
-	@echo ''
-
