@@ -1,3 +1,8 @@
+Tue Oct 15 11:35:59 EDT 2002	nsc <Nicholas_Castellano@acml.com>
+	* src/server/Makefile.am:
+	- Bump libtdssrv major version.
+	- Use convenience libraries to pull in required symbols.
+
 Tue Oct 15 11:33:47 EDT 2002	nsc <Nicholas_Castellano@acml.com>
 	* src/dblib/unittests/Makefile.am:
 	- Use check_PROGRAMS instead of EXTRA_PROGRAMS to build the
